# AuditaAI

./: .gitignore  .gitignore.local  ARCHITECTURE_FLOW.md  BUILD_CYCLE_3_COMPLETE.md  CONVERSATION_LAMPORT_CHAINS.md  DEPLOYMENT_CHECKLIST.md  EMAIL_NOTIFICATION_SYSTEM.md  ENTERPRISE_AUDIT_ARCHITECTURE.md  FAKE_DATA_AUDIT.md  FOUNDER_ACCOUNT_READY.md  FREE_LOCAL_MODELS.md  FREE_MODELS_IMPLEMENTATION.md  HISTORICAL_TRENDS_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LAMPORT_RECEIPT_IMPLEMENTATION.md  MATH_CANON_IMPLEMENTATION.md  MOBILE_RESPONSIVE_IMPLEMENTATION.md  MVP_PILOT_REVIEW.md  OPERATOR_ROLE.md  PARALLEL_PROMPTING_IMPLEMENTATION.md  PILOT_ARCHITECTURE.md  PILOT_DEMO_GUIDE.md  PILOT_DOCS_INDEX.md  PILOT_PAGE_ISSUES_TODO.md  PILOT_PRICING_IMPLEMENTATION.md  PILOT_QUICK_REFERENCE.md  RATE_LIMITING_SYSTEM.md  README.md  ROSETTA_ALIGNMENT.md  ROSETTA_BOOT_SEQUENCE.md  ROSETTA_ENTERPRISE_EVOLUTION.md  ROSETTA_IMPLEMENTATION.md  SESSION_SELECTOR_IMPLEMENTATION.md  TASK_1_COMPLETE.md  TASK_1_PROGRESS.md  TASK_2_COMPLETE.md  VERIFICATION_REPORT.md  create-founder-account.mjs  create-founder.sql  (+14 more)
backend/: .env.example  (+30 more)
workspace/auditaai_backend/: pyproject.toml
workspace/auditaai_backend/prisma/: schema.prisma
workspace/auditaai_backend/scripts/: __init__.py  prisma.py
workspace/auditaai_backend/src/ben/: __init__.py  audit_service.py  ben_boot.py  ben_event.py  receipt_utils.py  types.py  verify_chain.py  verify_hash.py
workspace/auditaai_backend/src/research_station/: types.py
workspace/auditaai_backend/tests/: test_receipt_utils.py
(+603 files in other folders)
