[tool.poetry]
name = "auditaai_backend"
version = "1.3.0"
description = "AuditaAI Backend MVP Pilot - BEN Cognitive OS Integration"
authors = ["Michael Tobin Gomes <michael@auditaai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.0"
pydantic = "^2.4.2"
prisma = "^0.10.0"
cryptography = "^41.0.0"
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.9.0"
isort = "^5.12.0"
mypy = "^1.6.0"

[tool.poetry.scripts]
generate-prisma = "scripts.prisma:generate"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"